// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class: JsxScope > run > captures metrics for workspace files when instrumented package is installed by root package 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "[redacted2]",
                    "[redacted4]",
                  ],
                  "jsx.element.attributes.values": [
                    "[redacted1]",
                    "[redacted3]",
                    "[redacted5]",
                  ],
                  "jsx.element.module.specifier": "instrumented-top-level",
                  "jsx.element.name": "PackageComp",
                  "npm.dependency.instrumented.name": "460da73f7e63aeb72106788158261156d165376633de24e4a6673122ce2470aa",
                  "npm.dependency.instrumented.raw": "460da73f7e63aeb72106788158261156d165376633de24e4a6673122ce2470aa",
                  "npm.dependency.instrumented.version.major": "1",
                  "npm.dependency.instrumented.version.minor": "0",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "92521fc3cbd964bdc9f584a991b89fddaa5754ed1cc96d6d42445338669c1305",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "jsx.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "jsx",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: JsxScope > run > captures metrics when instrumented package is installed in intermediate package 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "[redacted2]",
                    "[redacted4]",
                  ],
                  "jsx.element.attributes.values": [
                    "[redacted1]",
                    "[redacted3]",
                    "[redacted5]",
                  ],
                  "jsx.element.module.specifier": "instrumented",
                  "jsx.element.name": "PackageComp",
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "1",
                  "npm.dependency.instrumented.version.minor": "0",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "92521fc3cbd964bdc9f584a991b89fddaa5754ed1cc96d6d42445338669c1305",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "jsx.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "jsx",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: JsxScope > run > correctly captures jsx element metric data 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "[redacted2]",
                    "[redacted4]",
                  ],
                  "jsx.element.attributes.values": [
                    "[redacted1]",
                    "[redacted3]",
                    "[redacted5]",
                  ],
                  "jsx.element.module.specifier": "instrumented",
                  "jsx.element.name": "[Default]",
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "0",
                  "npm.dependency.instrumented.version.minor": "1",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "6ad9613a455798d6d92e5f5f390ab4baa70596bc869ed6b17f5cdd2b28635f06",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "secondProp",
                    "[redacted6]",
                    "[redacted8]",
                    "[redacted10]",
                    "[redacted11]",
                    "[redacted12]",
                    "[redacted14]",
                  ],
                  "jsx.element.attributes.values": [
                    "hi",
                    "wow",
                    "[redacted7]",
                    "[redacted9]",
                    "[redacted5]",
                    "[redacted5]",
                    "[redacted13]",
                    "[redacted15]",
                  ],
                  "jsx.element.module.specifier": "instrumented",
                  "jsx.element.name": "ImaginaryThing",
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "0",
                  "npm.dependency.instrumented.version.minor": "1",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "6ad9613a455798d6d92e5f5f390ab4baa70596bc869ed6b17f5cdd2b28635f06",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 1,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "jsx.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "jsx",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;
